# entity_ident

./: Cargo.toml  README.md
src/: identifier.rs  lib.rs  test.rs  tests.rs
