[package]
name = "entity_ident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2" }
base62 = "2"
regex = { version = "1", features = ["std", "perf", "perf-dfa", "perf-inline", "perf-literal", "perf-cache"] }
lazy_static = "1"